# slimdemes

./: .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
eidos/: demes.eidos  utilities.eidos
slimdemes/: main.py
src/slimdemes/: __init__.py  demes.py  main.py  testing.py  utilities.py
tests/: test_slimdemes.py
tests/OutOfAfricaArchaicAdmixture_5R19/: OutOfAfricaArchaicAdmixture_5R19.json  sim.slim
tests/examples/OutOfAfricaArchaicAdmixture_5R19/: OutOfAfricaArchaicAdmixture_5R19.yml
tests/test_slim/: Snakefile  test_sim.slim
tests/test_slim/config/: test_config.yaml
workflows/msprime_validation/: Snakefile  test_sim.slim
workflows/msprime_validation/config/: dev_test_config.yaml  dev_test_config.yml  test_config.yaml
workflows/msprime_validation/demes_specs/: Constant1k.yml
