[build-system]
requires = [
    "setuptools>=64.0",
    "wheel",
    "cython>=3.0.0",
    "setuptools_scm[toml]>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "slimdemes"
description = "Python package for demographic modeling with SLiM and demes"
authors = [
    {name = "Vince Buffalo", email = "vsbuffalo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "defopt>=6.4.0",
    "demes>=0.2.3",
    "jupyterlab>=4.2.5",
    "matplotlib>=3.9.2",
    "moments-popgen>=1.2.2",
    "msprime>=1.3.3",
    "polars>=1.12.0",
    "pyslim>=1.0.4",
    "pyyaml>=6.0.2",
    "snakemake>=8.24.1",
    "stdpopsim>=0.2.0",
    "timestamp>=0.0.1",
]

[project.urls]
"Homepage" = "https://github.com/vsbuffalo/slimdemes"
"Bug Tracker" = "https://github.com/vsbuffalo/slimdemes/issues"

[project.scripts]
slimdemes = "slimdemes.main:main"

[project.optional-dependencies]
test = [
    "pytest>=8.3.3",
    "ruff>=0.7.3",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["slimdemes"]

[tool.setuptools.package-data]
slimdemes = ["*"]

[tool.setuptools_scm]
write_to = "src/slimdemes/_version.py"

[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | _version\.py
)/
'''

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    "venv",
    ".tox",
    "build",
    "dist",
]
